# perdex

./: .gitignore  Cargo.toml  README.md  justfile  package.json  pnpm-lock.yaml
.cargo/: config.toml
.vitepress/: config.mts
.vitepress/theme/: Mermaid.vue  index.ts
app/: Cargo.toml
app/src/: error.rs  lib.rs  main.rs
app/src/modules/: mod.rs
app/src/modules/groups/: mod.rs
crates/pd-activitypub/: Cargo.toml
crates/pd-activitypub/src/: lib.rs  webfinger.rs
crates/pd-activitypub/src/ap/: activity.rs  actor.rs  mod.rs  object.rs
crates/pd-activitypub/src/jsonld/serde/: first_ok.rs  id.rs  set.rs
crates/pd-activitypub/tests/: serde_activitypub.rs  serde_first_ok.rs  serde_id.rs  serde_set.rs  webfinger.rs
crates/pd-activitypub/tests/certs/: cert.pem  key.pem
crates/pd-activitypub/tests/datasets/actors/: masto.dangillmor.json
crates/pd-activitypub/tests/datasets/jrd/: partridge_jrd.json
crates/pd-activitypub/tests/datasets/objects/: chaos.social_users_buffet_statuses_112880458964643197.json  cyberpunk.lol_users_vantablack_statuses_112783753040965194.json  masto.a2_4am.116410563154525427.json  misskey.io_notes_9wdc7w599izd0c70.json
crates/pd-blocking/: Cargo.toml
crates/pd-blocking/src/: lib.rs
crates/pd-core/: Cargo.toml
crates/pd-core/src/account/: model.rs  traits.rs
crates/pd-core/src/federation/domain/: account.rs
crates/pd-federation/: Cargo.toml
crates/pd-federation/src/: lib.rs
crates/pd-federation/src/ap_type/: activity.rs  actor.rs  object.rs  webfinger.rs
crates/pd-federation/src/ap_type/jsonld/serde/: first_ok.rs  id.rs  mod.rs  set.rs
crates/pd-federation/src/ap_types/: activity.rs  actor.rs  mod.rs  object.rs
crates/pd-federation/src/ap_types/jsonld/serde/: first_ok.rs  id.rs  set.rs
crates/pd-federation/src/resolver/: webfinger.rs
crates/pd-federation/tests/: ap_actor.rs  ap_object.rs  jsonld_first_ok.rs  jsonld_id.rs  jsonld_set.rs  jsonld_set_skip_none.rs  resolver_webfinger.rs
crates/pd-federation/tests/datas/actors/: misskey.io_users_7rkrarq81i.json
crates/pd-federation/tests/datas/objects/: corteximplant.net_objects_67d3796c-1645-474d-9bb1-4620ec774fba.json
crates/pd-http/: Cargo.toml
crates/pd-http/src/: body.rs  error.rs  lib.rs  resolver.rs  response.rs
crates/pd-http/tests/: basic.rs  body_limit.rs  execute_signed.rs  get_bytes.rs  get_json.rs  get_stream.rs  integration.rs
crates/pd-jsonld/: Cargo.toml
crates/pd-jsonld/src/: lib.rs
crates/pd-jsonld/src/serde/: id.rs  mod.rs  set.rs
crates/pd-jsonld/tests/: serde_set.rs
crates/pd-signature/: Cargo.toml
crates/pd-signature/src/: lib.rs
crates/pd-signature/src/cavage/: mod.rs  parse.rs  parser.rs  serialize.rs  sig.rs
crates/pd-signature/src/cavage/header/: lexer.rs  mod.rs  serde.rs
crates/pd-signature/src/crypto/: generate.rs  mod.rs  parse.rs  sign.rs  verify.rs
crates/pd-signature/tests/: cavage_header_parse.rs  cavage_parse.rs  cavage_sig.rs  cavage_sign.rs  crypto_generate.rs
crates/pd-signature/tests/key/: private_ed25519.pem  private_rsa.pem  public_ed25519.pem  public_rsa.pem
crates/pd-telemetry/: Cargo.toml
crates/pd-telemetry/src/: error.rs  lib.rs
docs/: README.md  activitypub.md  architecture.md  guidelines.md  index.md  package.json  rest-api.md
docs/.vitepress/: config.mts
docs/src/: activitypub.md  index.md
