
[workspace]
resolver = "3"
members = [
    "app",
    "crates/pd-activitypub",
    "crates/pd-core",
    "crates/pd-http",
    "crates/pd-telemetry",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Local dependencies
pd-core = { path = "crates/pd-core" }
pd-http = { path = "crates/pd-http" }
pd-telemetry = { path = "crates/pd-telemetry" }

async-stream = { version = "0.3" }
axum = { version = "0.8.9" }
bytes = { version = "1.11", features = ["serde"] }
error-stack = { version = "0.7", features = ["eyre"] }
futures-util = { version = "0.3", default-features = false, features = [
    "async-await",
    "std",
] }
hickory-resolver = { version = "0.26", default-features = false, features = [
    "tokio",
    "tls-ring",
    "rustls-platform-verifier",
] }
http = { version = "1.4" }
reqwest = { version = "0.13", features = [
    "stream",
    "gzip",
    "brotli",
    "zstd",
    "deflate",
] }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3" }
simdutf8 = { version = "0.1" }
sonic-rs = { version = "0.5" }
thiserror = { version = "2.0" }
time = { version = "0.3", features = ["serde-human-readable"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
typed-builder = { version = "0.23" }
urlencoding = { version = "2.1" }

# Dev dependencies
flate2 = { version = "1.1" }
serde_test = { version = "1.0" }
wiremock = { version = "0.6" }
axum-server = { version = "0.8", features = ["tls-rustls"] }
rustls = { version = "0.23", features = ["ring"] }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
correctness = { level = "deny" }

[workspace.lints.rust]
unsafe_code = { level = "deny" }
rust-2018-idioms = { level = "deny", priority = -1 }
unexpected_cfgs = { level = "warn" }
