
[workspace]
resolver = "3"
members = [
    "app",
    "crates/pd-blocking",
    "crates/pd-core",
    "crates/pd-federation",
    "crates/pd-http",
    "crates/pd-signature",
    "crates/pd-telemetry",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Local dependencies
pd-blocking = { path = "crates/pd-blocking" }
pd-core = { path = "crates/pd-core" }
pd-http = { path = "crates/pd-http" }
pd-signature = { path = "crates/pd-signature" }
pd-telemetry = { path = "crates/pd-telemetry" }

async-stream = { version = "0.3" }
axum = { version = "0.8.9" }
base64-simd = { version = "0.8" }
bytes = { version = "1.11", features = ["serde"] }
const-oid = { version = "0.9.6", features = [
    "db",
] } # PKCS8 0.10 depends on const-oid 0.9.6
error-stack = { version = "0.7" }
futures-util = { version = "0.3", default-features = false, features = [
    "async-await",
    "std",
] }
hickory-resolver = { version = "0.26", default-features = false, features = [
    "tokio",
    "tls-ring",
    "rustls-platform-verifier",
] }
http = { version = "1.4" }
http-body = { version = "1.0" }
http-body-util = { version = "0.1" }
httpdate = { version = "1.0" }
hyper = { version = "1.9" }
hyper-rustls = { version = "0.27", default-features = false, features = [
    "http1",
    "http2",
    "logging",
    "ring",
    "tls12",
    "webpki-tokio",
] }
hyper-util = { version = "0.1", features = [
    "client-legacy",
    "http1",
    "http2",
    "tokio",
] }
logos = { version = "0.16" }
miette = { version = "7.6" }
mime = { version = "0.3" }
pin-project-lite = { version = "0.2" }
pkcs8 = { version = "0.10", features = ["pem", "std"] }
rand = { version = "0.10" }
rayon = { version = "1.12" }
ring = { version = "0.17", features = ["std"] }
rsa = { version = "0.10.0-rc.17" }
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3" }
simdutf8 = { version = "0.1" }
sonic-rs = { version = "0.5" }
thiserror = { version = "2.0" }
time = { version = "0.3", features = ["serde-human-readable"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", default-features = false, features = ["util"] }
tower-http = { version = "0.6", features = [
    "decompression-br",
    "decompression-deflate",
    "decompression-gzip",
    "follow-redirect",
    "map-response-body",
    "timeout",
    "trace",
    "util",
] }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
typed-builder = { version = "0.23" }
urlencoding = { version = "2.1" }

# Dev dependencies
axum-server = { version = "0.8", features = ["tls-rustls"] }
flate2 = { version = "1.1" }
rustls = { version = "0.23", features = ["ring"] }
serde_test = { version = "1.0" }
wiremock = { version = "0.6" }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
correctness = { level = "deny" }

[workspace.lints.rust]
unsafe_code = { level = "deny" }
rust-2018-idioms = { level = "deny", priority = -1 }
unexpected_cfgs = { level = "warn" }
