[package]
name = "app"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pd-telemetry = { workspace = true }

axum = { workspace = true }
error-stack = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
