[package]
name = "pd-activitypub"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
eyre = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
sonic-rs = { workspace = true }
time = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
serde_test = { workspace = true }

[lints]
workspace = true
