[package]
name = "pd-activitypub"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pd-http = { workspace = true }
pd-core = { workspace = true }

thiserror = { workspace = true }
error-stack = { workspace = true }
eyre = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
sonic-rs = { workspace = true }
time = { workspace = true }
typed-builder = { workspace = true }
urlencoding = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
serde_test = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }

[lints]
workspace = true
