[package]
name = "pd-activitypub"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pd-core = { workspace = true }
pd-http = { workspace = true }

error-stack = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
sonic-rs = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
typed-builder = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
serde_test = { workspace = true }
tokio = { workspace = true }
axum-server = { workspace = true }
axum = { workspace = true }
rustls = { workspace = true }

[lints]
workspace = true
