[package]
name = "pd-federation"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pd-core = { workspace = true }
pd-http = { workspace = true }

error-stack = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
sonic-rs = { workspace = true }
time = { workspace = true }
typed-builder = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
axum-server = { workspace = true }
bytes = { workspace = true }
rustls = { workspace = true }
serde_test = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
