[package]
name = "pd-http"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
pd-signature = { workspace = true }

async-stream = { workspace = true }
bytes = { workspace = true }
error-stack = { workspace = true }
futures-util = { workspace = true }
hickory-resolver = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
simdutf8 = { workspace = true }
sonic-rs = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
flate2 = { workspace = true }
tokio = { workspace = true }
wiremock = { workspace = true }
pkcs8 = { workspace = true }

[lints]
workspace = true
