[package]
name = "pd-jsonld"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
sonic-rs = { workspace = true }
serde_with = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
serde_test = { workspace = true }

[lints]
workspace = true
